--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "TOKEN": "",
-    "ID": "",
-    "HASH": "",
+    "TOKEN": "7940320759:AAGHoVigekPlgFbtLsWF4rZXdKtVAxh6Z0c",
+    "ID": "20252902",
+    "HASH": "5686c6a3cb3e303178c060c980a4ec9b",
     "STRING": null
 }
