--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "TOKEN": "7726990110:AAHQciiSApTB9FEa0DlYIYgQETKBT77Hq9k"
+    "TOKEN": "7726990110:AAHQciiSApTB9FEa0DlYIYgQETKBT77Hq9k", 
     "ID": "20252902",
     "HASH": "5686c6a3cb3e303178c060c980a4ec9b",
     "STRING": null
